// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonEmpty is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiButtonEmpty--primary testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props color danger is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--danger"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color disabled is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--disabled"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color ghost is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--ghost"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color primary is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color text is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush left is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--flushLeft"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush right is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--flushRight"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props href secures the rel attribute when the target is _blank 1`] = `
<a
  class="euiButtonEmpty euiButtonEmpty--primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</a>
`;

exports[`EuiButtonEmpty props iconSide left is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonEmpty__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props iconSide right is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--iconRight"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonEmpty__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props iconType is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonEmpty__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled renders a button even when href is defined 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size l is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--large"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size s is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size xs is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;
